# picksy.ai

./: .env  .gitignore  README.md  pyproject.toml
agent-backend/: DealFinder.py  DealFinderAgent.py  DealFindingTask.py  main.py
app/: page.tsx
app/ui/: fonts.ts
components/: Hero.tsx  Sidebar.tsx
ecommerce_agent.egg-info/: PKG-INFO  entry_points.txt
picksyai/: main.py  next.config.ts  package.json  pnpm-lock.yaml
picksyai.egg-info/: SOURCES.txt  requires.txt
picksyai/agents/: DealFinderAgent.py
picksyai/app/: globals.css  layout.tsx  page.tsx
picksyai/app/ui/: fonts.ts
picksyai/components/: Hero.tsx  Sidebar.tsx
picksyai/tasks/: DealFindingTask.py
picksyai/tools/: DealFinder.py  Tavilyphase2.py
